# SRA_Dispatch

./: .gitignore  README.md  download_sra_batches.sh  pyproject.toml  requirements.txt
assets/: download_sra_batches.sh
assets/static_files/: derep.py  multivariant.py
config/: config.json
sra_dispatch/: __main__.py  balance_nodes.py  build_submit_file.py  query_SRA_for_size.py
src/: balance_download.py  query_SRA_for_size.py  read_config.py
src/sra_dispatch/: balance_nodes.py  build_submit_file.py  main.py  query_SRA_for_size.py
static_files/: SAM_Refiner.py  SRA_fetch.py  Variant_extractor.py
tests/: test_config.json  test_query.py
