[project]
name = "sra_crypt"
version = "0.1.0"
description = "Tool for large-scale trolling of the Sequence Read Archive for SARS-CoV-2 cryptic lineages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "polars>=1.5.0",
    "pandas>=2.2.2",
    "pysradb>=2.2.0",
    "pydantic>=2.8.2",
    "pyarrow>=17.0.0",
    "loguru>=0.7.2",
    "whenever>=0.6.7",
    "rich>=13.7.1",
    "anyio>=4.4.0",
    "bio>=1.7.1",
    "xlsxwriter>=3.2.0",
    "tqdm>=4.66.5",
    "xlsx2csv>=0.8.3",
    "dask>=2024.8.2",
    "dask-expr>=1.1.13",
    "distributed>=2024.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "marimo[sql]>=0.8.0",
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "tox>=4.18.0",
    "pip>=24.2",
    "pyright>=1.1.377",
    "quarto>=0.1.0",
    "just>=0.8.162",
    "pre-commit>=3.8.0",
    "jupyter>=1.1.1",
    "graphviz>=0.20.3",
    "bokeh>=3.5.2",
]
compile-bytecode = true

[project.scripts]
"sra_crypt" = "sra_crypt.__main__:main"
